# Auto-JIPS

./: Dockerfile  EXPERT_REVIEW.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start.bat
.agent/workflows/: build-ajips.md
.github/workflows/: ci.yml  deploy.yml
ajips/app/: main.py
ajips/app/api/: routes.py  schemas.py
ajips/app/services/: constants.py  critique.py  enhanced_extraction.py  enrichment.py  extraction.py  ingestion.py  profiling.py
ajips/core/: logging_config.py
ajips/core/pipelines/: job_profile.py
ajips/ui/: app.js  index.html  styles.css
tests/: test_api.py  test_comprehensive.py  test_core_functionality.py  test_ingestion.py
