[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ajips"
version = "1.1.0"
description = "Automated Job Intelligence Profiling System"
authors = [{name="bucky-ops", email="83084745+bucky-ops@users.noreply.github.com"}]
license = {text="MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.112.2",
    "pydantic>=2.8.2",
    "uvicorn>=0.30.6",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "spacy>=3.7.2",
    "scikit-learn>=1.4.0",
    "nltk>=3.8.1",
    "numpy>=1.26.3",
    "pandas>=2.2.0",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "python-json-logger>=2.0.7",
    "slowapi>=0.1.9",
    "cachetools>=5.3.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "responses>=0.24.1",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ajips*"]